tests/rosetta/out/Smalltalk/anonymous-recursion.out
/workspace/mochi/tests/rosetta/out/Smalltalk/anonymous-recursion.st:8: parse error, expected '|' or identifier
